--- a/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
@@ -83,7 +83,7 @@
     <string name="HIPS_Perm_Bluetooth_Connectivity_Desc">Activare bluetooth</string>
     <string name="HIPS_Perm_Bluetooth_Connectivity_Hint">%1$s aplicaţii pot activa bluetooth-ul</string>
     <string name="HIPS_Perm_Body_Sensors">Senzori corporali</string>
-    <string name="HIPS_Perm_Body_Sensors_Desc">Senzori corporali(de ex. senzori pentru măsurarea ritmului cardiac)</string>
+    <string name="HIPS_Perm_Body_Sensors_Desc">senzori corporali(de ex. senzori pentru măsurarea ritmului cardiac)</string>
     <string name="HIPS_Perm_Calendar">Accesare calendar</string>
     <string name="HIPS_Perm_Calendar_Desc">Accesare calendar</string>
     <string name="HIPS_Perm_Calendar_Hint">%1$s aplicaţii pot accesa calendarul</string>
@@ -111,7 +111,7 @@
     <string name="HIPS_Perm_DisableKeyguard_Hint">%1$s aplicaţii pot debloca ecranul</string>
     <string name="HIPS_Perm_EndCall">Finalizare apel</string>
     <string name="HIPS_Perm_External_Storage">Accesare și modificare fișiere din memoria internă</string>
-    <string name="HIPS_Perm_External_Storage_Desc">"Adăugare și ștergere fișiere din memoria internă"</string>
+    <string name="HIPS_Perm_External_Storage_Desc">"adăugare și ștergere fișiere din memoria internă"</string>
     <string name="HIPS_Perm_GetCallState">Obţinere stare apel</string>
     <string name="HIPS_Perm_ListenCallState">Monitorizare stare apel</string>
     <string name="HIPS_Perm_Location">Localizare</string>
@@ -217,19 +217,19 @@
     <string name="HIPS_Perm_Xiaomi_Account_Desc">Accesare cont Mi</string>
     <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s aplicații pot accesa contul dvs. Mi</string>
     <string name="HIPS_Perm_add_voicemail">Mesaje vocale</string>
-    <string name="HIPS_Perm_add_voicemail_Desc">Adăugare mesaje vocale</string>
+    <string name="HIPS_Perm_add_voicemail_Desc">adăugare mesaje vocale</string>
     <string name="HIPS_Perm_get_accounts">Accesare conturi de pe telefon</string>
-    <string name="HIPS_Perm_get_accounts_Desc">Accesarea tuturor conturilor de pe telefon</string>
+    <string name="HIPS_Perm_get_accounts_Desc">accesarea tuturor conturilor de pe telefon</string>
     <string name="HIPS_Perm_install_shortcut">Widgeturi pe ecranul principal</string>
-    <string name="HIPS_Perm_install_shortcut_Desc">Adăugarea de widgeturi pe ecranul principal</string>
+    <string name="HIPS_Perm_install_shortcut_Desc">adăugarea de widgeturi pe ecranul principal</string>
     <string name="HIPS_Perm_process_nfc">NFC</string>
-    <string name="HIPS_Perm_process_nfc_Desc">Accesarea dispozitivului NFC</string>
+    <string name="HIPS_Perm_process_nfc_Desc">accesarea dispozitivului NFC</string>
     <string name="HIPS_Perm_process_outgoing_calls">Accesarea aplicației Telefon</string>
-    <string name="HIPS_Perm_process_outgoing_calls_Desc">Monitorizarea și încheierea apelurilor</string>
+    <string name="HIPS_Perm_process_outgoing_calls_Desc">monitorizarea și încheierea apelurilor</string>
     <string name="HIPS_Perm_read_notification_sms">Serviciu SMS</string>
-    <string name="HIPS_Perm_read_notification_sms_Desc">Citire SMS-uri</string>
+    <string name="HIPS_Perm_read_notification_sms_Desc">citire SMS-uri</string>
     <string name="HIPS_Perm_use_sip">Servicii video</string>
-    <string name="HIPS_Perm_use_sip_Desc">Utilizarea SIP pentru partajare videoclipuri</string>
+    <string name="HIPS_Perm_use_sip_Desc">utilizarea SIP pentru partajare videoclipuri</string>
     <string name="HIPS_SecurityPrompt_Accept">Permit (%d)</string>
     <string name="HIPS_SecurityPrompt_AcceptRoot">Permiteţi</string>
     <string name="HIPS_SecurityPrompt_Accept_Once">Permiteţi o dată (%d)</string>
