--- a/Romanian/main/Calendar.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/strings.xml
@@ -302,7 +302,7 @@
     <string name="preferences_default_reminder_title">Timp predefinit pentru memento</string>
     <string name="preferences_general_title">Setarea afişării calendarului</string>
     <string name="preferences_hide_declined_title">Ascundeţi evenimentele refuzate</string>
-    <string name="preferences_history_events">Arată istoricul evenimentelor</string>
+    <string name="preferences_history_events">Arată evenimentele istorice</string>
     <string name="preferences_holidays">Arată zilele libere</string>
     <string name="preferences_home_tz_default">Europa/București</string>
     <string name="preferences_home_tz_title">Fus orar de acasă</string>
