--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -408,6 +408,10 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="login_and_enable_service">Conectați-vă utilizând contul Mi</string>
     <string name="lomoish">Lomo</string>
     <string name="long_press_to_refocus">Atingeți și mențineți apăsat pentru a reorienta</string>
+    <string name="main_discard_confirm_message">Există modificări nesalvate</string>
+    <string name="main_discard_negative_btn">Renunțați</string>
+    <string name="main_discard_positive_btn">Salvați și ieșiți</string>
+    <string name="main_save_error_msg">"Nu s-au putut salva modificările datorită unei erori apărute"</string>
     <string name="megabyteShort">MB</string>
     <string name="menu_album_new_album">Album nou</string>
     <string name="menu_item_sort_date">Dată</string>
@@ -429,7 +433,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="negative">Negativ</string>
     <string name="network_connected_rescan">Nu se poate conecta la reţea</string>
     <string name="network_unsatisfied_button_text">Conectați-vă la rețea</string>
-    <string name="new_album_invalid_char">Numele albumului conține caractere nepermise \"%s\"; introduceți doar litere sau cifre.</string>
+    <string name="new_album_invalid_char">"Numele albumului nu poate conține \"%s\"; introduceți doar litere sau cifre."</string>
     <string name="new_album_invalid_name">\"%s\" este un album de sistem; redenumiți-l.</string>
     <string name="new_album_invalid_prefix">"Nu folosiți \".\" or \"_\" la începutul numelui albumului."</string>
     <string name="next">Următorul</string>
@@ -499,7 +503,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="phone_number_empty_alert">Adăugaţi numărul de telefon</string>
     <string name="photo">Fotografii</string>
     <string name="photo_edit_file_not_exits_tip">Descărcați mai întâi fotografia pentru a o putea edita</string>
-    <string name="photo_editor_saving">Se salvează</string>
+    <string name="photo_editor_saving">Se salvează...</string>
     <string name="photo_page_save_uri_image_fail">"Nu s-a putut salva în Galerie"</string>
     <string name="photo_page_save_uri_image_ok">Fotografia a fost salvată în Galerie</string>
     <string name="photo_save_succeed">Salvat cu succes</string>
@@ -510,13 +514,13 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="picker_continue_download">Continuați descărcarea</string>
     <string name="picker_continue_with_exists">Continuați cu fotografiile de pe telefon</string>
     <string name="picker_download">Descărcați</string>
-    <string name="picker_download_progress_message">Se descarcă. Finalizat: %1$d/%2$d</string>
+    <string name="picker_download_progress_message">Se descarcă %1$d/%2$d</string>
     <string name="picker_full_format">Puteți selecta până la %d elemente.</string>
-    <string name="picker_image_need_download">%d dintre fotografiile selectate nu sunt pe telefon; le descărcați utilizând datele mobile?</string>
-    <string name="picker_image_will_download">%d dintre fotografiile selectate nu sunt pe telefon; se descarcă</string>
-    <string name="picker_mobile_data_video">"Nu se pot descărca videoclipuri utilizând datele mobile; omiteți %d."</string>
-    <string name="picker_origin_need_download">%1$d dintre fotografiile selectate nu sunt pe telefon (%2$dMB); le descărcați utilizând datele mobile?</string>
-    <string name="picker_title_format">Selectați %d fotografii</string>
+    <string name="picker_image_need_download">"%d dintre fotografiile selectate nu sunt pe telefon; le descărcați utilizând datele mobile?"</string>
+    <string name="picker_image_will_download">"%d dintre fotografiile selectate nu sunt pe telefon; acestea vor fi descărcate"</string>
+    <string name="picker_mobile_data_video">"Nu se pot descărca videoclipuri utilizând datele mobile; au fost omise %d."</string>
+    <string name="picker_origin_need_download">"%1$d dintre fotografiile selectate nu sunt pe telefon (%2$dMB); le descărcați utilizând datele mobile?"</string>
+    <string name="picker_title_format">Fotografii selectate: %d</string>
     <string name="picker_title_selection_format">Au fost selectate %d fotografii</string>
     <string name="picker_title_unlimit">Selectați fotografiile</string>
     <string name="posterize">Posterizare</string>
@@ -549,13 +553,14 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="relation_text_mother">Mamă</string>
     <string name="relation_with_you">Alegeți gradul de rudenie</string>
     <string name="release_space_finish_format">A fost eliberat %s spațiu de stocare intern</string>
-    <string name="remove_from_secret_fail">Eliminarea din albumul secret a eșuat</string>
+    <string name="remove_from_secret_fail">"Nu s-a putut elimina din albumul secret"</string>
     <string name="remove_from_secret_failed_with_reason">"Nu se poate elimina din albumul secret. %1$s."</string>
     <string name="remove_from_secret_failed_with_reason_and_count">"%2$s elemente nu au putut fi eliminate din albumul secret. %1$s."</string>
     <string name="remove_from_secret_successful">Eliminat din albumul secret</string>
     <string name="rename_face_album">Schimbaţi numele</string>
     <string name="rename_fail_msg">Schimbare nume eşuată</string>
     <string name="rename_from_contact">Nume din agendă</string>
+    <string name="renren_description">Oferit de RenRen</string>
     <string name="request_qr_code_failed">Obţinerea codului QR a eşuat</string>
     <string name="request_sms_url_failed">Nu s-a reușit solicitarea informaţiei</string>
     <string name="request_sms_url_msg">Solicitare informaţie…</string>
@@ -629,6 +634,9 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="storage_no_space">Spațiu insuficient</string>
     <string name="straighten">Îndreptare</string>
     <string name="straighten_tooltip">Trageţi fotografia pentru a o îndrepta</string>
+    <string name="sub_discard_confirm_message">Salvați modificările?</string>
+    <string name="sub_discard_negative_btn">Renunțați</string>
+    <string name="sub_discard_positive_btn">Salvați</string>
     <string name="success_create_quick_icon_on_desk">Creare reuşită</string>
     <string name="sync_album_in_proecess">Sincronizare album…</string>
     <string name="sync_battery_low">Acumulator descărcat</string>
@@ -666,7 +674,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="user_agreement4">Politica de confidențialitate</string>
     <string name="user_alias_self">Individual</string>
     <string name="user_notice_identify_summary_format">"Utilizând acest serviciu sunteți de acord cu %1$s și %2$s Xiaomi."</string>
-    <string name="user_notice_title">Atenție</string>
+    <string name="user_notice_title">Termeni și Condiții</string>
     <string name="video_edit_file_not_exits_tip">Descărcați mai întâi videoclipul</string>
     <string name="video_editor_abandon_changes_tip_message">Renunțați la toate modificările?</string>
     <string name="video_editor_abandon_changes_tip_title">Renunțați la modificări</string>
@@ -707,8 +715,10 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="video_editor_more">Avansat</string>
     <string name="video_editor_not_support_tips">"Acest tip de videoclipuri nu sunt suportate"</string>
     <string name="video_editor_ok">OK</string>
-    <string name="video_editor_res_not_load_dialog_msg">Pentru a utiliza aceasta caracteristică trebuie să descărcați pachetele de resurse</string>
-    <string name="video_editor_res_not_load_dialog_title">Necesită descărcarea</string>
+    <string name="video_editor_res_download_failed_tips">"Nu s-a putut descărca; verificați setările rețelei și încercați din nou"</string>
+    <string name="video_editor_res_download_mobil_network_confirm_msg">Descărcați coloanele sonore utilizând datele mobile?</string>
+    <string name="video_editor_res_download_mobil_network_confirm_title">Utilizați datele mobile</string>
+    <string name="video_editor_res_not_load_dialog_msg">Descărcați coloanele sonore pentru a utiliza această caracteristică (peste 20MB).</string>
     <string name="video_editor_template_family">Familie</string>
     <string name="video_editor_template_forbidden_tips">"Nu se poate face asta când se utilizează un șablon"</string>
     <string name="video_editor_template_oldfilm">Vintage</string>
