--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -618,10 +618,10 @@ Conexiunea utilizează semnale Bluetooth de putere redusă."</string>
     <string name="button_disconnect_network">Deconectaţi de la reţea</string>
     <string name="button_light_timeout">Durată iluminare taste</string>
     <string name="button_text_accept">Accept</string>
-    <string name="button_text_accept_timer">Accept(%d)</string>
+    <string name="button_text_accept_timer">Acceptați (%d)</string>
     <string name="button_text_login">Conectaţi-vă</string>
     <string name="button_text_next_step">Mai departe</string>
-    <string name="button_text_next_step_timer">Pasul următor(%d)</string>
+    <string name="button_text_next_step_timer">Pasul următor (%d)</string>
     <string name="button_text_reboot_now">Repornire</string>
     <string name="button_text_reject">Renunț</string>
     <string name="cache_header_label">Memorie cache</string>
@@ -1671,7 +1671,7 @@ Este posibil ca unele aplicaţii să nu funcţioneze înainte de a fi actualizat
     <string name="lockpattern_need_to_unlock_wrong_footer" />
     <string name="lockpattern_pattern_confirmed_header">Noul dvs. model pentru deblocare</string>
     <string name="lockpattern_pattern_entered_header">Model înregistrat</string>
-    <string name="lockpattern_pattern_same_with_owner">Trebuie să fie diferită de parola pentru spațiul implicit</string>
+    <string name="lockpattern_pattern_same_with_owner">Trebuie să fie diferită de parola pentru spațiul principal</string>
     <string name="lockpattern_pattern_same_with_security_space">Trebuie să fie diferită de parola pentru al doilea spațiu</string>
     <string name="lockpattern_recording_incorrect_too_short">Conectaţi minimum %d puncte. Încercaţi din nou</string>
     <string name="lockpattern_recording_inprogress">Ridicaţi degetul când aţi terminat</string>
@@ -2139,29 +2139,29 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
     <string name="path_gps_settings">Setări/Setări adiționale/Confidențialitate/Locație</string>
     <string name="path_handy_mode_settings">Setări/Setări adiționale/One_handed mode</string>
     <string name="path_home_key">Setări/Setări adiționale/Butoane/Acasă</string>
-  <string name="path_key_settings">Settings/Additional settings/Buttons</string>
-  <string name="path_lab_functions_title">Settings/Additional/Beta features</string>
-  <string name="path_language_picker_title">Settings/Additional settings/Language &amp; input/Language</string>
-  <string name="path_language_settings">Settings/Additional settings/Language &amp; input</string>
-  <string name="path_led_settings">Settings/Additional settings/Notification light</string>
-  <string name="path_legal_information">Settings/About phone/Legal information</string>
-  <string name="path_legal_user_agreement">Settings/About phone/Legal information/Terms of Service</string>
-  <string name="path_local_auto_backup_section_title">Settings/Additional settings/Backup &amp; reset/Auto backups</string>
-  <string name="path_local_backup_section_title">Settings/Additional settings/Backup &amp; reset/Local backups</string>
-  <string name="path_location_settings_title">Settings/Additional settings/System Security/Location</string>
-  <string name="path_lock_sounds_enable_title">Settings/Sound &amp; vibration/Screen lock sound</string>
-  <string name="path_manage_device_admin">Settings/Additional settings/System Security/Device administrators</string>
-  <string name="path_manage_notification_access_title">Settings/Additional settings/System Security/Notification access</string>
-  <string name="path_master_clear_title">Settings/Additional settings/Backup &amp; reset/Factory data reset</string>
-  <string name="path_music_audio_effect_optimize">Settings/Sound &amp; vibration/Audio settings</string>
-  <string name="path_music_headset_calibrate">Settings/Sound &amp; vibration/Audio settings/Assign buttons</string>
-  <string name="path_music_headset_mode_settings">Settings/Sound &amp; vibration/Audio settings/Headphone remote buttons</string>
-  <string name="path_music_headset_settings">Settings/Additional settings/Headphones &amp;andio effects</string>
-  <string name="path_music_mi_effect_title">Settings/Sound &amp; vibration/Audio settings/Mi Sound Enhancer</string>
-  <string name="path_network_settings">Settings/SIM cards &amp; mobile networks</string>
+    <string name="path_key_settings">Setări/Setări adiționale/Butoane</string>
+  <string name="path_lab_functions_title">Setări/Setări adiționale/Beta features</string>
+    <string name="path_language_picker_title">Setări/Setări adiționale/Limbă și metodă de introducere/Limba</string>
+    <string name="path_language_settings">Setări/Setări adiționale/Limbă și metodă de introducere</string>
+    <string name="path_led_settings">Setări/Setări adiționale/Indicator luminos intermitent</string>
+    <string name="path_legal_information">Setări/Informații telefon/Informații de ordin juridic</string>
+    <string name="path_legal_user_agreement">Setări/Informații telefon/Informații de ordin juridic/Condiții de utilizare</string>
+    <string name="path_local_auto_backup_section_title">Setări/Setări adiționale/Creare copie de rezervă și resetare/Backup automat</string>
+    <string name="path_local_backup_section_title">Setări/Setări adiționale/Creare copie de rezervă și resetare/Copii de rezervă locale</string>
+    <string name="path_location_settings_title">Setări/Setări adiționale/Securitate/Servicii de localizare</string>
+    <string name="path_lock_sounds_enable_title">Setări/Sunet/Sunet de blocare a ecranului</string>
+    <string name="path_manage_device_admin">Setări/Setări adiționale/Securitate/Administratori dispozitiv</string>
+    <string name="path_manage_notification_access_title">Setări/Setări adiționale/Securitate/Acces la notificări</string>
+    <string name="path_master_clear_title">Setări/Setări adiționale/Creare copie de rezervă și resetare/Resetarea la configurarea din fabrică</string>
+    <string name="path_music_audio_effect_optimize">Setări/Sunet/Setări audio</string>
+    <string name="path_music_headset_calibrate">Setări/Sunet/Setări audio/Atribuire butoane</string>
+    <string name="path_music_headset_mode_settings">Setări/Sunet/Setări audio/Butoane căști</string>
+    <string name="path_music_headset_settings">Setări/Setări adiționale/Căști și efecte audio</string>
+    <string name="path_music_mi_effect_title">Setări/Sunet/Setări audio/Amplificatorul Mi Sound</string>
+    <string name="path_network_settings">Setări/Cartele SIM și rețele mobile</string>
   <string name="path_networks_title">Settings/SIM cards &amp; mobile networks/Cellular networks</string>
   <string name="path_nfc_se_route_title">Settings/More/Secure element position</string>
-  <string name="path_notification_app_list_settings">Settings/Notifications &amp; status bar/App notifications</string>
+ zaaaa <string name="path_notification_app_list_settings">Settings/Notifications &amp; status bar/App notifications</string>
   <string name="path_notification_sound">Settings/Sound &amp; vibration/Default notification sound</string>
   <string name="path_notification_sound_title">Settings/Sound &amp; vibration/Default notification sound</string>
   <string name="path_ntts_settings_title">Settings/Additional settings/Accessibility/tts_settings_title</string>
@@ -2561,7 +2561,7 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
     <string name="restriction_settings_title">Restricții</string>
     <string name="restriction_wifi_config_summary">Permiteți modificarea setărilor pentru rețele Wi-Fi și mobile</string>
     <string name="restriction_wifi_config_title">Rețele Wi-Fi și mobile</string>
-    <string name="retry">Reîncercaţi</string>
+    <string name="retry">Încercați din nou</string>
     <string name="ring_volume_option_title">Volum sonerie</string>
     <string name="ring_volume_title">Volum sonerie</string>
     <string name="ringtone_mute">Niciunul</string>
@@ -2770,7 +2770,7 @@ Pentru a utiliza fixarea ecranului:
     <string name="search_location_settings_title">Locație</string>
     <string name="search_lock_sounds_enable_title">Sunet blocare ecran</string>
     <string name="search_manage_device_admin">Administratori dispozitiv</string>
-  <string name="search_manage_notification_access_title">Notification access</string>
+    <string name="search_manage_notification_access_title">Acces la notificări</string>
     <string name="search_master_clear_title">Resetare la configurarea din fabrică</string>
     <string name="search_menu">Căutare</string>
     <string name="search_micloud">Sincronizare;MiCloud</string>
@@ -2786,11 +2786,11 @@ Pentru a utiliza fixarea ecranului:
     <string name="search_notification_sound_title">Sunet de notificare implicit</string>
     <string name="search_ntts_settings_title">Rezultatul transformării textului în vorbire;TTS</string>
     <string name="search_oldman_mode">Modul Ușor</string>
-    <string name="search_onekey_migrate">Transfer;One key migrate</string>
+  <string name="search_onekey_migrate">Transfer;One key migrate</string>
     <string name="search_other_advanced_settings">Setări adiționale;Setări confidențialitate;Data și ora;Limbă și metode de introducere;Modul operare cu o mână;Acumulator și performanță;Performanță;Stocare;LED notificări;LED;Căști și efecte audio;Butoane;Taste;Accesibilitate;Caracteristici Beta;Lab functions;Opțiuni dezvoltator;Creare copie de rezervă și resetare;Transfer;One key migrate</string>
     <string name="search_owner_info_settings">Informații proprietar</string>
     <string name="search_page_layout_settings">Mărimea textului</string>
-  <string name="search_pointer_speed">Pointer speed</string>
+  <string name="search_pointer_speed">Viteza indicatorului</string>
     <string name="search_power_checker">Verificare energie</string>
     <string name="search_power_hide_mode_title">Gestionare utilizare acumulator de către aplicații</string>
     <string name="search_power_mode">mod utilizare acumulator</string>
@@ -2829,7 +2829,7 @@ Pentru a utiliza fixarea ecranului:
     <string name="search_status_bar_settings_show_carrier">Afișare nume operator</string>
     <string name="search_status_bar_settings_show_network_speed">Afișare viteză de conexiune</string>
     <string name="search_status_bar_settings_show_notification_icon">Se afișează pictogramele notificărilor</string>
-<string name="search_status_bar_settings_show_screenshot_notification">Se afișează screenshot notification</string>
+ <string name="search_status_bar_settings_show_screenshot_notification">Se afișează screenshot notification</string>
     <string name="search_status_bar_settings_style">Stil bară de stare</string>
     <string name="search_status_bar_settings_toggle_collapse_after_clicked">Se restrânge după atingere</string>
     <string name="search_status_sim">Stare cartelă SIM</string>
@@ -2838,15 +2838,51 @@ Pentru a utiliza fixarea ecranului:
     <string name="search_sync_settings">Sincronizare;Auto;Doar în Wi-Fi</string>
     <string name="search_system_app_settings">Aplicații de sistem</string>
     <string name="search_tether">Hotspot Wi-Fi portabil;Hotspot personal</string>
-    <string name="search_unlock_set">setare deblocare</string>
-    <string name="search_virtual_sim">SIM virtual</string>
-    <string name="search_vpn">vpn</string>
-    <string name="search_wallpaper">im. de fundal</string>
-    <string name="search_wifi">wi-fi</string>
+    <string name="search_tether_settings_title_bluetooth">Tethering prin Bluetooth</string>
+    <string name="search_tether_settings_title_usb">Tethering prin USB</string>
+    <string name="search_theme_settings">Teme</string>
+    <string name="search_toggle_position">Poziția comutatoarelor</string>
+    <string name="search_touch_assistant">Asistent ecran</string>
+    <string name="search_touch_sensitive_title">Mod cu mănuși</string>
+    <string name="search_trusted_credentials">Acreditări de încredere</string>
+    <string name="search_tts_settings_title">Rezultatul transformării textului în vorbire</string>
+    <string name="search_turn_on_security_lock">Modificați blocarea ecranului</string>
+    <string name="search_unlock_set">Blocare ecran;Info. proprietar;Inactivitate;Trezire ecran pentru notificări;Parolă;Prevenirea apelării în buzunar;Deblocați cu un dispozitiv Bluetooth;Blocare ecran și parolă</string>
+    <string name="search_user_agreement">Termenii serviciului</string>
+    <string name="search_user_dict_settings_title">Dicționar personal</string>
+    <string name="search_vibrate_in_silent_title">Vibrează în Modul Silențios</string>
+    <string name="search_vibrate_on_touch_title">Vibrare la atingere</string>
+    <string name="search_vibrate_when_ringing_title">Vibrează când sună</string>
+  <string name="search_virtual_sim">SIM virtual</string>
+    <string name="search_vpn">VPN</string>
+    <string name="search_vpn_enable">VPN</string>
+    <string name="search_vpn_settings_password">Parolă de protecție VPN</string>
+    <string name="search_wakeup_for_keyguard_notification_title">Trezire ecran pentru notificări</string>
+    <string name="search_wallpaper">Imaginea de fundal</string>
+    <string name="search_wifi">Wi-Fi;Setări avansate</string>
+    <string name="search_wifi_advanced_ip_address_title">Adresă IP</string>
+    <string name="search_wifi_advanced_mac_address_title">Adresă MAC</string>
+    <string name="search_wifi_advanced_settings">Setări avansate;Wi-Fi</string>
+    <string name="search_wifi_display">Ecran wireless</string>
+    <string name="search_wifi_enable">Wi-Fi;Activați Wi-Fi</string>
+    <string name="search_wifi_install_credentials">Instalare certificate</string>
+    <string name="search_wifi_menu_p2p">Wi-Fi Direct</string>
+    <string name="search_wifi_menu_wps_pin">Introduceți PIN WPS</string>
+  <string name="search_wifi_more_settings">Mai multe;Mod Avion;VPN;Tethering;Ecran wireless;International mobile data;NFC;Android Beam;Secure element position</string>
+    <string name="search_wifi_scan_always_available">Scanare nereu disponibilă</string>
+    <string name="search_wifi_setting_frequency_band_title">Bandă de frecvență Wi-Fi</string>
+    <string name="search_wifi_setting_sleep_policy_title">Mențineți Wi-Fi activat în modul Inactiv</string>
+    <string name="search_wifi_tether_checkbox">Hotspot Wi-Fi portabil</string>
+    <string name="search_wifi_tether_configure_ap_text">Configurați hotspotul Wi-Fi</string>
+    <string name="search_wifi_wapi_cert_install">Instalați certificat WAPI</string>
+    <string name="search_wifi_wapi_cert_uninstall">Dezinstalați certificat WAPI</string>
+    <string name="search_wps_connect_title">Conectare WPS</string>
+    <string name="search_xiaomi_account">Cont Mi</string>
+  <string name="search_xspace">XSpace</string>
+    <string name="search_zen_mode_option_miui_silent">Modul Silențios</string>
+    <string name="second_space">Spațiul secundar</string>
     <string name="secure_keyguard_business_title">&gt;Setați metoda de blocare a ecranului</string>
     <string name="secure_lock_encryption_warning">"Deoarece ați activat un serviciu de accesibilitate, dispozitivul nu va utiliza parola de blocare a ecranului pentru criptarea datelor."</string>
-    <string name="search_wifi_display">ecran wifi</string>
-    <string name="second_space">Spațiu secundar</string>
     <string name="security_enable_widgets_disabled_summary">Setare dezactivată de administrator</string>
     <string name="security_enable_widgets_title">Activați widgeturi</string>
     <string name="security_keyguard_category_name">Blocare ecran</string>
@@ -3102,11 +3138,11 @@ Acest lucru este posibil datorită unui certificat de încredere instalat pe dis
     <string name="status_bar_settings_show_keyguard_notification">Notificări plutitoare şi blocare ecran</string>
     <string name="status_bar_settings_show_network_speed">Afişare viteză de conexiune</string>
     <string name="status_bar_settings_show_notification_icon">Se afişează pictogramele notificărilor</string>
-    <string name="status_bar_settings_show_screenshot_notification">Afişare notificare captură de ecran</string>
     <string name="status_bar_settings_show_wifi_name">Afişare Wi-Fi</string>
     <string name="status_bar_settings_status_bar">Bară de stare</string>
+    <string name="status_bar_settings_style">Afișarea notificărilor și a comutatoarelor</string>
     <string name="status_bar_settings_toggle_collapse_after_clicked">Se restrânge după atingere</string>
-    <string name="status_bar_settings_toggle_position">Poziţii comutatoare</string>
+    <string name="status_bar_settings_toggle_position">Poziţia comutatoarelor</string>
     <string name="status_bar_style_list">Combinate</string>
     <string name="status_bar_style_page">Separate</string>
     <string name="status_bt_address">Adresă Bluetooth</string>
@@ -3213,7 +3249,7 @@ O abordare Google asupra sincronizării datelor, care vă permite accesul la age
     <string name="tether_settings_title_usb_bluetooth">Tethering</string>
     <string name="tether_settings_title_wifi">Hotspot portabil</string>
     <string name="tethering_help_button_text">Ajutor</string>
-    <string name="tethering_settings_not_available">Setările hotspotului portabil nu sunt accesibile acestui cont de utilizator</string>
+    <string name="tethering_settings_not_available">Modificați setările pentru hotspot în Spațiul Principal</string>
     <string name="theme_settings_title">Teme</string>
     <string name="time_picker_title">Ora</string>
     <string name="time_zone_auto_stub">Selectaţi fusul orar</string>
@@ -3903,9 +3939,9 @@ Permiteți acest lucru pentru toate aplicațiile care solicită scanarea?"</stri
     <string name="wifi_setup_back">Înapoi</string>
     <string name="wifi_setup_cancel">Anulaţi</string>
     <string name="wifi_setup_connect">Conect.</string>
-    <string name="wifi_setup_description_connected">"Atingeţi <b>Înainte</b>" pentru a continua configurarea.
+    <string name="wifi_setup_description_connected">Atingeţi &lt;b&gt;Înainte&lt;/b&gt;" pentru a continua configurarea.
 
-Atingeţi "<b>Înapoi</b> pentru a vă conecta la o altă reţea Wi-Fi."</string>
+Atingeţi "&lt;b&gt;Înapoi&lt;/b&gt; pentru a vă conecta la o altă reţea Wi-Fi."</string>
     <string name="wifi_setup_description_connecting">Conectarea poate dura câteva minute…</string>
     <string name="wifi_setup_detail">Detalii reţea</string>
     <string name="wifi_setup_eap_not_supported">Nu puteţi configura o conexiune Wi-Fi EAP în timpul instalării. După instalare, puteţi face acest lucru în Setări > Reţele wireless.</string>
