--- a/Romanian/main/BugReport.apk/res/values-ro/strings.xml
+++ b/Romanian/main/BugReport.apk/res/values-ro/strings.xml
@@ -46,9 +46,57 @@
     <string name="err_type_wifi">Wi-Fi</string>
     <string name="err_type_xiaomi_family">Familia Mi</string>
     <string name="err_type_xiaomi_service">Serviciu clienți</string>
-    <string name="hot_problem">Vizualizaţi problemele comune</string>
+    <string name="error_no_connection">"Nu s-a putut conecta la rețea"</string>
+    <string name="feedback_bug_status_change_notification_desc">%1$s problema \"%2$s\"</string>
+    <string name="feedback_collect_log_failed">"Nu s-au putut obține rapoartele de eroare"</string>
+    <string name="feedback_description">Descriere</string>
+    <string name="feedback_description_bugreport_hint">În unele situații (…) telefonul meu se comportă anormal (…).</string>
+    <string name="feedback_description_label">Descriere</string>
+    <string name="feedback_description_suggest_hint">"Doresc să adăugați o funcție nouă () deoarece îmi este folositoare pentru ()."</string>
+    <string name="feedback_detail_tile">Progres</string>
+    <string name="feedback_empty_report_list">Niciun raport încă</string>
+    <string name="feedback_history_remind_login_desc">"Conectați-vă la contul Mi pentru a vedea detaliile și progresul raportului dumneavoastră"</string>
+    <string name="feedback_id">ID: %d</string>
+    <string name="feedback_package_log_failed">"Nu s-au putut comprima rapoartele de eroare"</string>
+    <string name="feedback_phone_model_label">Modelul telefonului</string>
+    <string name="feedback_probability_label">Probabilitate</string>
+    <string name="feedback_remind_login_btn">Conectați-vă</string>
+    <string name="feedback_report_remind_login_desc">Conectați-vă la contul Mi pentru ca inginerii noștri să vă poată contacta.</string>
+    <string name="feedback_report_remind_login_desc2">"Puteți vedea, de asemenea, progresul raportului în \"Rapoartele mele\"."</string>
+    <string name="feedback_retest_label">Pașii pentru reproducerea problemei</string>
+    <string name="feedback_select_images">Adăugați imagini</string>
+    <string name="feedback_select_upload_log">Adăugați rapoarte de eoare</string>
+    <string name="feedback_status_answered">Răspuns</string>
+    <string name="feedback_status_change_notification_title">"Progresul raportului dumneavoastră a fost actualizat"</string>
+    <string name="feedback_status_commit_failed_title">"Nu s-a putut trimite raportul"</string>
+    <string name="feedback_status_commit_succ_title">Trimis</string>
+    <string name="feedback_status_commit_uploading_title">Se trimite…</string>
+    <string name="feedback_status_more">Detalii</string>
+    <string name="feedback_status_processing">Procesare…</string>
+    <string name="feedback_status_recorded">S-a primit feedback</string>
+    <string name="feedback_status_replyed">Răspuns</string>
+    <string name="feedback_status_reresolved">Rezolvat</string>
+    <string name="feedback_status_supplement">Descrieți în detaliu problema</string>
+    <string name="feedback_submit_failed_notification_desc">Vedeți detaliile</string>
+    <string name="feedback_submit_failed_notification_retry">Trimiteți din nou</string>
+    <string name="feedback_submit_failed_notification_title">"Nu s-a putut trimite raportul"</string>
+    <string name="feedback_submit_hint1">"Vă vom înștiința despre progresul raportului"</string>
+    <string name="feedback_submit_hint2">Mergeți la \"Rapoartele mele\" pentru a vedea detaliile</string>
+    <string name="feedback_submit_succ">Trimis cu succes</string>
+    <string name="feedback_submit_succ_button">Finalizat</string>
+    <string name="feedback_suggestion_status_change_notification_desc">%1$s sugestie \"%2$s\"</string>
+    <string name="feedback_title">Titlu</string>
+    <string name="feedback_title_hint">Descrieți pe scurt problema</string>
+    <string name="feedback_tracking">Urmăriți problemele</string>
+    <string name="feedback_version_label">Versiunea</string>
+    <string name="feesback_list">Rapoarte</string>
+    <string name="first_position">2#</string>
+    <string name="floor">%1$s#</string>
+    <string name="from">de la %1$s</string>
     <string name="loading_apps">Încărcare listă…</string>
+    <string name="login_system_failed">"Nu s-a putut conecta; încercați din nou"</string>
     <string name="logo_title">Centrul de raportare probleme</string>
+    <string name="max_error">Descrierea %1$s ar trebui să fie mai scurtă.</string>
     <string name="menu_copy">Copiaţi</string>
     <string name="modem_tool_log">Înregistrare jurnale modem</string>
     <string name="modem_tool_log_start">Porniţi</string>
@@ -92,4 +140,9 @@
     <string name="toast_report_copied_to_clipboard">Raportul a fost copiat în clipboard</string>
     <string name="toast_report_sent_failed">Imposibil de trimis raportul</string>
     <string name="toast_report_sent_succeed">Raportul a fost trimis</string>
+    <string name="toast_title_required">Descrieți problema</string>
+    <string name="topic_author">1#</string>
+    <string name="try_again">Încercați din nou</string>
+    <string name="warning_field_empty">Introduceți %1$s</string>
+    <string name="warning_field_invalid">Selectați o %1$s validă</string>
 </resources>
