--- a/Romanian/main/FM.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FM.apk/res/values-ro/strings.xml
@@ -60,8 +60,8 @@
     <string name="txt_divider">" | "</string>
     <string name="txt_sleep_mode">Modul repaus</string>
     <string name="using_recorder_cancel">Refuzați</string>
-    <string name="using_recorder_confirm">De acord</string>
-    <string name="using_recorder_dialog_message">"Radio FM trebuie să utilizeze serviciile de înregistrare ale telefonului pentru a funcționa în mod normal."</string>
-    <string name="using_recorder_dialog_title">Permisiune de accesare</string>
+    <string name="using_recorder_confirm">Permiteți</string>
+    <string name="using_recorder_dialog_message">"Radio FM trebuie să acceseze serviciile de înregistrare ale telefonului pentru a funcționa în mod normal."</string>
+    <string name="using_recorder_dialog_title">Este necesară acordarea permisiunii de accesare</string>
     <string name="view_stations_list">Vizualizaţi lista staţiilor</string>
 </resources>
