--- a/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAccount.apk/res/values-ro/strings.xml
@@ -138,7 +138,6 @@
     <string name="mi_account_identity_title">Verificaţi identitatea dvs.</string>
     <string name="mi_pass">Mi Pass</string>
     <string name="mi_pay_identity">Identitate</string>
-    <string name="micloud_account_name">Cont Mi</string>
     <string name="micloud_space_info">Disponibil: %s</string>
     <string name="mili_center">Credite Mi</string>
     <string name="mipay_center">Portofel Mi</string>
@@ -240,8 +239,8 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="passport_login_title">Conectaţi-vă la un cont existent</string>
     <string name="passport_login_using_other_ways">&lt;u&gt;Alte modalități de conectare&lt;/u&gt;</string>
     <string name="passport_login_with_email_or_id">&lt;u&gt;Conectaţi-vă cu adresa de e-mail sau ID-ul contului Mi&lt;/u&gt;</string>
-    <string name="passport_miui_provision_find_status_text">"Acest telefon este asociat unui cont Mi existent（%1$s）; trebuie să introduceți parola pentru a se verifica telefonul.
-(cod de deblocare: %2$s)"</string>
+    <string name="passport_miui_provision_find_status_text">"Acest telefon este asociat unui cont Mi existent (%1$s); trebuie să introduceți parola pentru a se verifica telefonul.
+(Cod de deblocare: %2$s)"</string>
     <string name="passport_next">Înainte</string>
     <string name="passport_notification_title">Eroare de conectare pentru %1$s</string>
     <string name="passport_password_req_notice">Parola trebuie să aibă 8-16 caractere și să includă atât cifre cât și litere.</string>
